Fix alignment

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ section {
 .home {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 15rem;
 }
 
@@ -95,22 +95,19 @@ section {
     flex-direction: column;
     align-items: baseline;
     text-align: left;
-    justify-content: center;
+    justify-content: flex-end;
     margin-top: 3rem;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 3.5rem;
 }
 
 span{
     color: var(--main-color);
 }
 
-.home-content {
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    font-size: 3.5rem;
-}
-
 .home-content h1 {
-    font-size: 7rem;
+    font-size: 6rem;
     font-weight: 700;
     margin-top: 1.5rem;
     line-height: 1;
@@ -625,8 +622,6 @@ span{
         padding: 2rem 3%;
     }
     
-
-
     #text {
         font-size: 4rem;
     }
